Fix button to logout on mobile

--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -35,7 +35,7 @@ mat-toolbar-row {
 
 .example-container {
   width: 100%;
-  height: 180px;
+  height: 220px;
   background-color: #e76f51;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
